--- a/crm.html
+++ b/crm.html
@@ -432,21 +432,19 @@
           <button class="modal__btn-add-product btn-add-product jsModalBtnAddProduct" type="submit">Добавить товар</button>
         </div>
       </form>
+      <div class="modal-error__wrapper">
+        <div class="modal-error">
+          <button type="button" class="modal-error__close jsModalErrorClose">
+            <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
+              <path d="M2 2L22 22" stroke="#6E6893" stroke-width="3" stroke-linecap="round" />
+              <path d="M2 22L22 2" stroke="#6E6893" stroke-width="3" stroke-linecap="round" />
+            </svg>
+          </button>
+          <div class="modal-error__image"></div>
+          <p class="modal-error__text">Что-то пошло не так</p>
+        </div>
+      </div>
     </div>
   </div>
-
-  <div class="overlay-error">
-    <div class="modal-error">
-      <button type="button" class="modal-error__close jsModalErrorClose">
-        <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M2 2L22 22" stroke="#6E6893" stroke-width="3" stroke-linecap="round" />
-          <path d="M2 22L22 2" stroke="#6E6893" stroke-width="3" stroke-linecap="round" />
-        </svg>
-      </button>
-      <div class="modal-error__image"></div>
-      <p class="modal-error__text">Что-то пошло не так</p>
-    </div>
-  </div>
-  
 </body>
 </html>
