--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ShopOnline</title>
-  <script defer src="js/script.js"></script>
+  <!-- <script defer src="js/script.js"></script> -->
+  <script src="js/tasks.js"></script>
+  <!-- <script src="js/tasksHard_1.js"></script> -->
+  <!-- <script src="js/tasksHard_2.js"></script> -->
 </head>
 <body>
   
