--- a/secondary/secondary.html
+++ b/secondary/secondary.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ShopOnline</title>
   <script defer src="js/script.js"></script>
-  <script defer src="js/einstein.js"></script>
+  <!-- <script defer src="js/einstein.js"></script>gfgdgd -->
 </head>
 <body>
   
