--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link rel="preload" href="fonts/Inter-Bold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="styles/normalize.css">
   <link rel="stylesheet" href="styles/index.css">
+  <!-- <script defer src="js/script.js"></script> -->
   <title>CRM-ShopOnline</title>
 </head>
 <body>
