Добавить класс модальному окну

--- a/index.html
+++ b/index.html
@@ -377,7 +377,7 @@
     </div>
   </section>
 
-  <div class="overlay overlay_show">
+  <div class="overlay js-overlay">
     <div class="modal">
       <div class="modal__header">
         <p class="modal__title js-modal-title">Добавить товар</p>
