Сделать открывание и закрывание модального окна

--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@
   </section>
 
   <div class="overlay js-overlay">
-    <div class="modal">
+    <div class="modal js-modal">
       <div class="modal__header">
         <p class="modal__title js-modal-title">Добавить товар</p>
         <p class="modal__number">id: <span class="modal__number-span js-id-product">201910241</span></p>
